--- a/template.html
+++ b/template.html
@@ -8,19 +8,16 @@
   <title>flex</title>
 </head>
 <body>
-    <main>
-    <header>header</header>
-    <nav>nav</nav>
-<section class=s1>s1</section>
-<section class=s2>s2</section>
-<section class=s3>s3</section>
-<section class=s4>s4</section>
-<section class=s5>s5</section>
-<section class=s6>s6</section>
-<section class=s7>s7</section>
-<section class=s8>s8</section>
-<section class=s9>s9</section>
-<footer>footer</footer>
-    </main>
+  <main>
+  <section class=s1>s1 (300x200)</section>
+  <section class=s2>s2 (300x300)</section>
+  <section class=s3>s3 (300x300)</section>
+  <section class=s4>s4 (300x200)</section>
+  <section class=s5>s5 (300x200)</section>
+  <section class=s6>s6 (300x200)</section>
+  <section class=s7>s7 (300x200)</section>
+  <section class=s8>s8 (300x400)</section>
+  <section class=s9>s9 (300x400)</section>
+</main>
 </body>
 </html>
