--- a/template.html
+++ b/template.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <main>
-  <class class=s1><h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+  <class class=s1><h1>Loreem ipsum dolor sit amet consectetur adipisicing elit. 
     Adipisci dolore veniam eum architecto optio! Dolore cum explicabo nam, nulla autem hic vero sunt ut dignissimos, facere delectus deserunt. Ipsum, odit. (300x200)</h1></class>
   <section class=s2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati suscipit dolores tenetur rem, sit maxime cum vero temporibus, tempora, a 
     blanditiis animi alias qui quis mollitia provident laborum. Consectetur, placeat?(300x300)</section>
