--- a/template.html
+++ b/template.html
@@ -9,8 +9,8 @@
 </head>
 <body>
   <main>
-  <class class=s1><h1>Loreem ipsum dolor sit amet consectetur adipisicing elit. 
-    Adipisci dolore veniam eum architecto optio! Dolore cum explicabo nam, nulla autem hic vero sunt ut dignissimos, facere delectus deserunt. Ipsum, odit. (300x200)</h1></class>
+  <div class=s1><h1>Loreem ipsum dolor sit amet consectetur adipisicing elit. 
+    Adipisci dolore veniam eum architecto optio! Dolore cum explicabo nam, nulla autem hic vero sunt ut dignissimos, facere delectus deserunt. Ipsum, odit. (300x200)</h1></div>
   <section class=s2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati suscipit dolores tenetur rem, sit maxime cum vero temporibus, tempora, a 
     blanditiis animi alias qui quis mollitia provident laborum. Consectetur, placeat?(300x300)</section>
   <section class=s3>s3 (300x300)</section>
